project/funshop/kubernetes/efs-provisioner-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: efs-provisioner
  namespace: funshop
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: efs-provisioner
  template:
    metadata:
      labels:
        app: efs-provisioner
    spec:
      serviceAccount: efs-provisioner
      containers:
        - name: efs-provisioner
          image: quay.io/external_storage/efs-provisioner:latest
          volumeMounts:
            - name: pv-volume
              mountPath: /persistentvolumes
      volumes:
        - name: pv-volume
          nfs:
            server: fs-78f72103.efs.ap-northeast-2.amazonaws.com
            path: /
