project/funshop/kubernetes/autoscaleout_customer.yaml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  labels:
    app: customer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      containers:
        - name: customer
          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user03-customer:v1          
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "2000m"
            limits:
              cpu: "5000m"  


---

apiVersion: v1
kind: Service
metadata:
  name: customer
  labels:
    app: customer
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: customer
