project/funshop/kubernetes/autoscaleout_order.yml
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order
  namespace: funshop
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: 879772956301.dkr.ecr.ap-northeast-2.amazonaws.com/user03-order:v1          
          ports:
            - containerPort: 8080
          resources:
            requests:
#              memory: "256Mi"
              cpu: "200"
            limits:
#              memory: "512Mi"
              cpu: "500"  

---

apiVersion: v1
kind: Service
metadata:
  name: order
  namespace: funshop
  labels:
    app: order
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: order
