project/funshop/kubernetes/yanolza-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
 name: funshop-gateway2
spec:
  selector: 
    istio: ingressgateway
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: funshop
spec:
  hosts:
  - "*"
  gateways:
  - funshop-gateway2
  http:
  - match:
    - uri:
        exact: /order
    - uri:
        exact: /cart
    - uri:
        exact: /payment
	- uri:
        exact: /customer
    route:
    - destination:
        host: order
        port:
          number: 9080
